# salaus-harjoitustyo

./: .gitignore  README.md  coverage.xml  main.py  pyproject.toml  tasks.py
.github/workflows/: main.yml
dokumentaatio/: kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md  viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
dokumentaatio/viikkoraportit/: viikkoraportti1.md  viikkoraportti3.md  viikkoraportti4.md
src/: calculate500PrimeNumbers.py  calculateD.py  calculate_gcd.py  checkIfPrimeNumber.py  checkIfPrimeNumberMillerRabin.py  main.py  primeNumberGeneration.py  test_algorithm.py  test_decrypt.py  test_encrypt.py  test_main.py
src/tests/: test_calculateD.py  test_calculate_gcd.py  test_checkIfPrimeNumber.py  test_checkIfPrimeNumberMillerRabin.py  test_main.py  test_primeNumberGeneration.py
