[tool.poetry]
name = "salaus-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Anna Essina <anna.essina@helsinki.fi>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
coverage = "^7.3.2"
pytest = "^7.4.3"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
